--- a/.env
+++ b/.env
@@ -23,6 +23,6 @@ APP_SECRET=a50ee9dae7af543ba519b31115035778
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://symfony:ChangeMe@127.0.0.1:3306/app?serverVersion=5.7"
+DATABASE_URL="mysql://symfony:symfoPassword@127.0.0.1:3306/app?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
