--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,12 +48,12 @@ services:
         ports:
             - 8080:80
 
-    apache:
-        build:
-            context: './.docker/apache/'
+    nginx:
+        image: nginx:alpine
         restart: always
         volumes:
             - .:/var/www/html
+            - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
             - database
@@ -61,7 +61,6 @@ services:
             - backend
         ports:
             - 80:80
-            - 443:443
 
 networks:
     backend:
