--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/annotations": "^1.13",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
+        "symfony/doctrine-bridge": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
