--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,21 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.13",
+        "league/flysystem-bundle": "^2.2",
+        "liip/imagine-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-bridge": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.0.*",
+        "symfony/security-csrf": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -30,13 +35,10 @@
         "doctrine/orm": "^2.11",
         "knplabs/knp-paginator-bundle": "^5.8",
         "knplabs/knp-time-bundle": "^1.17",
-        "league/flysystem-bundle": "^2.2",
-        "liip/imagine-bundle": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/debug-bundle": "6.0.*",
-        "symfony/form": "6.0.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/mime": "6.0.*",
         "symfony/property-access": "6.0.*",
@@ -45,7 +47,6 @@
         "symfony/security-bundle": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/stopwatch": "6.0.*",
-        "symfony/validator": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*",
         "zenstruck/foundry": "^1.16"
     },
