--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,8 @@
         "doctrine/orm": "^2.11",
         "knplabs/knp-paginator-bundle": "^5.8",
         "knplabs/knp-time-bundle": "^1.17",
+        "league/flysystem-bundle": "^2.2",
+        "liip/imagine-bundle": "^2.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "stof/doctrine-extensions-bundle": "^1.7",
@@ -47,6 +49,7 @@
         "symfony/security-bundle": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/stopwatch": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*",
         "zenstruck/foundry": "^1.16"
     },
