--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
         restart: always
         volumes:
             - .:/var/www/html
-            - ${PATH_DB:./.docker/nginx/default.conf}:/etc/nginx/conf.d/default.conf
+            - ${PATH_NGINX:./.docker/nginx/default.conf}:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
             # - database
