--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.1'
 services:
     php:
         build:
-            context: ./.docker/php/
+            context: ${PATH:-.}/.docker/php/
             dockerfile: Dockerfile
         restart: always
         volumes:
-            - ${PATH_APP:-.}:/var/www/html
+            - ${PATH:-.}:/var/www/html
         # links:
         #     - database
 
@@ -26,7 +26,7 @@ services:
               '--default-authentication-plugin=mysql_native_password'
             ]
         volumes:
-            - ${PATH_DB:-./.docker/database/}:/var/lib/mysql:rw
+            - ${PATH:-.}/.docker/database/:/var/lib/mysql:rw
 
 ###< doctrine/doctrine-bundle ###
 
@@ -49,7 +49,7 @@ services:
         restart: always
         volumes:
             - .:/var/www/html
-            - ${PATH_NGINX:-./.docker/nginx/default.conf}:/etc/nginx/conf.d/default.conf
+            - ${PATH:-.}/.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
             # - database
