--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,4 @@ steps:
   - name: test
     image: docker/compose
     commands:
-      - docker-compose up -d
+      - docker-compose -f docker-compose.yml up -d
