--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,5 @@ steps:
   - name: test
     image: docker/compose
     commands:
-      - docker-compose -f docker-compose.yml up -d
+	- pwd
+     # - docker-compose -f docker-compose.yml up -d
