--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
   - name: deploy
-    image: docker/compose
+    image: docker
     commands:
       - sh ./.drone/deploy.sh
     volumes:
