update config drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
     commands:
       - sh ./.drone/deploy.sh
     volumes:
-      - name: docker
+      - name: docker_socket
         path: /var/run/docker.sock
 
 volumes:
