--- a/.drone.yml
+++ b/.drone.yml
@@ -6,9 +6,7 @@ steps:
   - name: deploy
     image: docker
     commands:
-      - echo ${DRONE_COMMIT_BRANCH}
-      - echo Build {{build.number}} of {{DRONE_COMMIT_BRANCH}} started. {{build.link}}
-#      - sh ./.drone/deploy.sh
+      - sh ./.drone/deploy.sh
 #      - sh ./.drone/test.sh
     volumes:
       - name: docker_socket
