--- a/.drone.yml
+++ b/.drone.yml
@@ -4,9 +4,10 @@ name: default
 
 steps:
   - name: deploy
-    image: docker
+    image: docker/compose:debian
     commands:
-      - sh ./.drone/deploy.sh
+      echo /bin -la --color
+#      - sh ./.drone/deploy.sh
 #      - sh ./.drone/test.sh
     volumes:
       - name: docker_socket
