--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
   - name: deploy
-    image: docker/compose:debian
+    image: docker/compose:debian-1.29.2
     commands:
       - echo /bin -la --color
 #      - sh ./.drone/deploy.sh
