--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
         restart: always
         volumes:
             - .:/var/www/html
-            - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./.docker/nginx:/etc/nginx/conf.d
         depends_on:
             - php
             # - database
